# piece-of-shit-sha-256-cracker

./: .gitignore  README.md  ShadowBreakerPro.desktop  common_passwords.txt  grid_chat.js  grid_server.js  hashing.js  index.js  shadow_breaker.py  shadow_breaker_pro.py
cache_builder/: Cargo.toml
cache_builder/src/: main.rs
rust_cracker/: Cargo.toml  build.rs
rust_cracker/cuda/: sha256.cu  sha256.cu.bak  sha256.cu.scalar  sha256.cu.stable
rust_cracker/hip/: sha256.hip
rust_cracker/src/: main.rs  main.rs.bak4  opencl_kernels.rs  opencl_kernels.rs.bak  opencl_kernels.rs.bak2  opencl_kernels.rs.bak3
